# embdcorecpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: embdcorecpp_global.hpp
include/embdcorecpp/: export.hpp  timechangeservice.hpp  timer.hpp  watchdog.hpp
source/: timechangeservice.cpp  timer.cpp  watchdog.cpp
tests/: main.cpp  tst_timer.hpp
